--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -147,6 +147,57 @@
     <string name="msg_disable_suggestions_prompt">Рекомендуемые приложения не будут показываться в начале списка. Данные, связанные с этой функцией, будут удалены.</string>
     <string name="label_turn_off_suggestions">ОТКЛЮЧИТЬ</string>
 
+    <!-- Preference categories -->
+    <string name="home_category_title">Рабочий стол</string>
+    <string name="app_drawer_category_title">Меню приложений</string>
+    <string name="icon_category_title">Значки приложений</string>
+    <string name="widget_category_title">Виджеты</string>
+
+    <!-- Hidden app -->
+    <string name="hide_app">Скрыть приложения</string>
+    <string name="hide_app_sum">Скрыть приложения из меню приложений</string>
+    <string name="hide_app_selected">&#160;выбрано</string>
+    <string name="hidden_app">Все приложения</string>
+    <string name="hide_selected">Скрыть выбранные приложения</string>
+    <string name="more">Больше</string>
+
+    <string name="reset_hidden_apps">Сброс</string>
+    <string name="reset_hidden_apps_done">Скрытые приложения теперь доступны</string>
+
+    <string name="show_swipeup_arrow">Индикатор открытия меню приложений</string>
+    <string name="show_swipeup_arrow_summary">Отображать индикатор в виде стрелки на рабочем столе</string>
+
+    <string name="pref_show_clock_weather">Погода и дата на рабочем столе</string>
+    <string name="pref_show_clock_weather_both">Отображать и погоду и дату</string>
+    <string name="pref_show_clock_weather_nothing">Не отображать</string>
+    <string name="pref_show_clock_weather_clock_only">Отображать только дату</string>
+    <string name="pref_show_clock_weather_weather_only">Отображать только погоду</string>
+
+    <!-- Hide/Show search bars -->
+    <string name="bottom_search_bar_title">Нижняя панель поиска</string>
+    <string name="bottom_search_bar_summary">Отображать панель поиска в док-баре</string>
+    <string name="top_search_bar_title">Верхняя панель поиска</string>
+    <string name="top_search_bar_summary">Отображать панель поиска в верхней части меню приложений</string>
+
+    <string name="num_default">По умолчанию</string>
+    <string name="num_three">Три</string>
+    <string name="num_four">Четыре</string>
+    <string name="num_five">Пять</string>
+    <string name="num_six">Шесть</string>
+    <string name="num_seven">Семь</string>
+
+    <string name="grid_category_title">Столбцы и ряды</string>
+    <string name="number_of_columns_title">Количество столбцов</string>
+    <string name="number_of_rows_title">Количество рядов</string>
+    <string name="number_of_hotseat_title">Количество значков в док-баре</string>
+
+    <string name="icon_shape_rounded_square">Квадрат с закругленными углами</string>
+
+    <string name="other_category_title">Персонализация</string>
+    <string name="other_category_summary">Дополнительные настройки</string>
+
+    <string name="action_edit">Редактировать</string>
+
     <string name="desktop_show_label_title">Показывать подписи</string>
     <string name="desktop_show_label_summary">Показывать подписи под значками.</string>
 
